--- a/_posts/2015-04-23-test.md
+++ b/_posts/2015-04-23-test.md
@@ -5,7 +5,7 @@ title: For test
 
 The following sample information is exposed to Jekyll templates in the *site.github* namespace:
 
-{{ site.github.public_repositories }}
+{{ site.github.owner_url }}
 
 ```json
 {
