--- a/_posts/2015-04-23-test.md
+++ b/_posts/2015-04-23-test.md
@@ -54,4 +54,13 @@ The following sample information is exposed to Jekyll templates in the *site.git
 }
 ```
 
+```javascript
+function(){
+    return "hello world"
+}
+```
+
+--- 
+
+:smile: 
 
