--- a/_posts/2015-04-23-test.md
+++ b/_posts/2015-04-23-test.md
@@ -54,13 +54,56 @@ The following sample information is exposed to Jekyll templates in the *site.git
 }
 ```
 
-```javascript
-function(){
-    return "hello world"
+### html highlighter test 
+```html
+<html>
+  <head></head>
+  <body></body>
+</html>
+```
+
+### css
+
+```
+#id{
+    background-color: #ff0;
+    with: 100px;
+    border:1px solid red;
+}
+.class{
+    padding:10px 20px 10px;
 }
 ```
 
---- 
+### JS test
 
-:smile: 
+```javascript
+function CommonController($scope){
+    $scope.commonFn=function(){
+        alert("这里是通用功能！");
+    };
+}
+
+function Controller1($scope) {
+    $scope.greeting = {
+        text: 'Hello1'
+    };
+    $scope.test1=function(){
+        alert("test1");
+    };
+}
+
+function Controller2($scope) {
+    $scope.greeting = {
+        text: 'Hello2'
+    };
+    $scope.test2=function(){
+        alert("test2");
+    }
+}
+```
+
+### emoji Test
+
+:smile: :fire:
 
