--- a/_posts/2015-04-23-test.md
+++ b/_posts/2015-04-23-test.md
@@ -56,15 +56,21 @@ The following sample information is exposed to Jekyll templates in the *site.git
 
 ### html highlighter test 
 ```html
-<html>
-  <head></head>
-  <body></body>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+</head>
+<body>
+  test
+</body>
 </html>
 ```
 
 ### css
 
-```
+```css
 #id{
     background-color: #ff0;
     with: 100px;
